# rover-commander

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
WebUI/: index.html  package-lock.json  package.json  server.js
config/: gamepad_xinput_mapper.json
release/config/: gamepad_xinput_mapper.json
src/: ConfigLoader.hpp  SystemState.cpp  SystemState.hpp  main.cpp
src/DTO/: Command.hpp
src/Input/: ControlManager.cpp  ControlManager.hpp  Gamepad.cpp  Gamepad.hpp  GamepadMapper.cpp  GamepadMapper.hpp
src/Network/: CommandDispatcher.cpp  CommandDispatcher.hpp  UdpTransceiver.cpp  UdpTransceiver.hpp
src/Video/: VideoManager.cpp  VideoManager.hpp
